<resources>
    <string name="app_name">Wireless House Warwick</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save</string>
    <string name="login_bottom_title">Staff Management Version 1.0</string>
    <string name="dashboard_welcome_text">Welcome to Wireless House Warwick</string>
    <string name="scan_qr_code_text">Scan QR Code here</string>
    <string name="please_sign_in">Please sign in below. Thank you</string>
    <string name="fire_text_alarm">Fire Text Alarm to go off today at Midday........</string>
    <string name="hello">Hello,</string>
    <string name="sign_in">Please sign in</string>
    <string name="existing_contractor">Existing Contractor</string>
    <string name="new_contractor">New Contractor</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_visitor">Company Visitor</string>
    <string name="staff_visitor">Staff Visitor</string>
    <string name="staff">Internal Staff</string>
    <string name="cleaners">Cleaner</string>
    <string name="cover_guards">Cover Guards</string>
    <string name="vehicle_reg">Vehicle Registration</string>
    <string name="orga_name">Organisation Name</string>
    <string name="please_choose_option_below">Please choose one of the options below</string>
    <string name="please_enter_your_contractor_name">Please enter your Contractor Name</string>
    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="please_enter_your_staff_id">Please enter your Staff ID</string>
    <string name="something_went_wrong">Something went wrong please try again later</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_update_firm">Update Firm</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_get_firmver">Get Firm Version</string>
    <string name="button_get_mediaver">Get Media Version</string>
    <string name="button_get_serialnum">Get Serial Number</string>
    <string name="button_send_mediainfo">Send Media Info</string>
    <string name="button_check_firm_file">Check Firm File Ver</string>
    <string name="button_check_media_file">Check Media File Ver</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="supported_device">PJ-7XX/RJ-4030Ai/RJ-2XXX</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="button_send_binfile">Send File</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="unable_access">Unable Access…</string>
    <string name="no_network_device">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="setting_alignment">Set Alignment</string>
    <string name="setting_PJ">Set PocketJet Parameter</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.7\n© 2016 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progress_dialog_message_preparing_connection">Preparing the connection…</string>
    <string name="progress_dialog_message_createData">Creating the data</string>
    <string name="progress_dialog_message_sendingData">Sending the data…</string>
    <string name="progress_dialog_message_sendingPrintingData">Sending the data…</string>
    <string name="progress_dialog_message_startPrint">Printing the data </string>
    <string name="progress_dialog_message_dataSent">The data was sent </string>
    <string name="progress_dialog_message_printed">The printing process was completed </string>
    <string name="progress_dialog_message_close_connection">Closing the connection</string>
    <string name="progress_dialog_message_set_paper">Please Set Paper</string>
    <string name="progress_dialog_message_cooling_start">Printer cooling start</string>
    <string name="progress_dialog_message_cooling_end">Printer cooling end</string>
    <string name="progress_dialog_message_waiting_peel">Wait for peeling label</string>
    <string name="progress_dialog_message_sending_template">File transferring</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">Getting Bluetooth settings </string>
    <string name="progress_dialog_message_setting_bluetooth_setting">Transferring Bluetooth settings </string>
    <string name="progress_dialog_message_removing_template">Removing templates </string>
    <string name="progress_dialog_message_getting_template">Getting template list </string>
    <string name="error_message_none">Succeeded</string>
    <string name="error_message_runtime">Runtime error occurred </string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="error_message_weong_os">Android OS is not supported</string>
    <string name="error_message_no_usb">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="trim_tape_after_data_title">Cutting zero lines </string>
    <string name="trim_tape_after_data_value">Select the cutting zero lines</string>
    <string-array name="orientation">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="orientation_values">
        <item>PORTRAIT</item>
        <item>LANDSCAPE</item>
    </string-array>
    <string name="number_of_copies_title">Number of copies</string>
    <string name="number_of_copies_value">Set the number of copies </string>
    <string name="halftoning_title">Half toning</string>
    <string name="halftoning_value">Select the half toning method </string>
    <string name="image_thresholding_title">Threshold of simple binary</string>
    <string name="image_thresholding_value">Select the threshold </string>
    <string name="scale_value_title">Scale value</string>
    <string name="scale_value_value">Select the scale value </string>
    <string-array name="halfToning">
        <item>Threshold</item>
        <item>Pattern dithering</item>
        <item>Error diffusion</item>
    </string-array>
    <string-array name="halfToningvalues">
        <item>THRESHOLD</item>
        <item>PATTERNDITHER</item>
        <item>ERRORDIFFUSION</item>
    </string-array>
    <string name="fit_to_page_title">Fit to page</string>
    <string name="fit_to_page_value">Select if fitting to page </string>
    <string-array name="check_print_end">
        <item>Not check</item>
        <item>Skip last page</item>
        <item>Check</item>
    </string-array>
    <string-array name="check_print_end_values">
        <item>CPE_NO_CHECK</item>
        <item>CPE_SKIP_LAST</item>
        <item>CPE_CHECK</item>
    </string-array>
    <string-array name="fitToPage">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>CUSTOM</item>
        <item>FIT_TO_PAPER</item>
    </string-array>
    <string-array name="fit_to_page_values">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>SCALE</item>
        <item>FIT_TO_PAPER</item>
    </string-array>
    <string-array name="printer_case">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="printer_case_values">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="pj_speed_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="is_carbon_title">Carbon</string>
    <string name="is_carbon_value">Select the carbon</string>
    <string name="pj_density_title">PJ Density</string>
    <string name="pj_density_value">Select the PJ density</string>
    <string name="mode9_title">Mode9</string>
    <string name="mode9_value">Select the Mode9</string>
    <string name="pj_speed_title">PJ Speed</string>
    <string name="pj_speed_value">Select the PJ speed</string>
    <string name="printer_case_title">Printer case</string>
    <string name="printer_case_value">Select the printer case</string>
    <string name="print_quality_title">Print quality</string>
    <string-array name="print_quality_value">
        <item>LOW_RESOLUTION</item>
        <item>NORMAL</item>
        <item>DOUBLE_SPEED</item>
        <item>HIGH_RESOLUTION</item>
    </string-array>
    <string name="is_skip_status_check_title">Skip Status Check</string>
    <string name="is_skip_status_check_value">Select Skip Status Check mode</string>
    <string name="check_print_end_title">Check the print end</string>
    <string name="check_print_end_value">Check the print end</string>
    <string name="home">Home</string>
    <string name="visitor">Visitor</string>
    <string name="contractor">Contractor</string>
    <string name="sign_out">Sign Out</string>
</resources>