<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_new_updated"
    android:orientation="vertical">


    <include layout="@layout/layout_common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|start"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginRight="@dimen/largeMargin"
        android:layout_weight="0.80"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="0.50">

            <com.adverticoLTD.avms.customClasses.FontTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:gravity="start"
                android:text="@string/scan_qr_code_text"
                android:textColor="#444444"
                android:textSize="@dimen/_14sdp"
                tools:text="@string/scan_qr_code_text" />

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/mCodeScanner"
                android:layout_width="@dimen/_156sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:autoFocusButtonVisible="false"
                app:flashButtonVisible="false"
                app:frameColor="@color/colorText"
                app:frameCornersCapRounded="true"
                app:frameCornersRadius="@dimen/_10sdp"
                app:frameSize="0.95"
                app:frameThickness="@dimen/_3sdp"
                app:maskColor="@color/whiteColor"
                app:maskVisible="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/common_margin"
                android:gravity="center"
                android:orientation="horizontal">



                <com.adverticoLTD.avms.customClasses.FontTextViewBold
                    android:id="@+id/txtManualTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|end"
                    android:text="If you do not have a QR Code "
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/loutManualSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:background="@drawable/click_here_btn_border"
                    android:visibility="gone">


                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="Click Here"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_weight="0.40"
            android:orientation="vertical">

            <com.adverticoLTD.avms.customClasses.FontsTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_welcome_text"
                android:textColor="@color/colorWhite"
                android:gravity="center|end"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_30sdp"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/loutHomeScreen"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:visibility="gone"
                    android:background="@drawable/btn_theme_border_color">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/home"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/largeMargin"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_buttons_arrow"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loutVisitorScreen"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/btn_theme_border_color">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/largeMargin"
                        android:text="@string/visitor"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_buttons_arrow"
                        android:tint="@color/colorGray"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loutStaffView"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/btn_theme_border_color">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/staff"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/largeMargin"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_buttons_arrow"
                        android:tint="@color/colorPink"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loutContractorScreen"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/btn_theme_border_color">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/largeMargin"
                        android:text="@string/contractor"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_buttons_arrow"
                        android:tint="@color/colorGray"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loutKeyLog"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/btn_theme_border_color"
                    android:visibility="visible">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/largeMargin"
                        android:text="Keys"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:tint="@color/colorGray"
                        android:src="@drawable/ic_buttons_arrow"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loutSignOut"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/btn_sign_out_border_color"
                    android:visibility="visible">

                    <com.adverticoLTD.avms.customClasses.FontTextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:paddingLeft="@dimen/largeMargin"
                        android:text="@string/sign_out"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/regularTextSize" />

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:tint="@color/colorGray"
                        android:src="@drawable/ic_buttons_arrow"
                        android:layout_marginRight="@dimen/largeMargin"
                        android:layout_height="@dimen/_10sdp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

    <include layout="@layout/layout_common_footer" />

</LinearLayout>